--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,7 @@ python = "^3.9"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.7.0"
+vapoursynth = "*"
 
 [tool.poetry.group.test.dependencies]
 coverage = "^7.2.0"
