--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,22 +21,23 @@ repos:
     hooks:
       - id: pretty-format-toml
         args: [--autofix]
-#  - repo: https://github.com/astral-sh/ruff-pre-commit
-#    rev: v0.1.6
-#    hooks:
-#      - id: ruff-format
-#      - id: ruff
-#        args: [--fix, --exit-non-zero-on-fix]
-#
-#  - repo: https://github.com/pre-commit/mirrors-mypy
-#    rev: v1.7.1
-#    hooks:
-#      - id: mypy
-#        args: [mbfunc, tests]
-#        pass_filenames: false
-#        additional_dependencies:
-#          - types-requests
-#          - types-certifi
-#          - pytest
-#          - pydantic
-#          - tenacity
+
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.1.6
+    hooks:
+      - id: ruff-format
+      - id: ruff
+        args: [--fix, --exit-non-zero-on-fix]
+
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v1.7.1
+    hooks:
+      - id: mypy
+        args: [mbfunc, tests]
+        pass_filenames: false
+        additional_dependencies:
+          - types-requests
+          - types-certifi
+          - pytest
+          - pydantic
+          - tenacity
