--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,8 +44,6 @@ version = "0.0.3"
 python = "^3.10"
 
 [tool.poetry.group.dev.dependencies]
-havsfunc = {git = "https://github.com/HomeOfVapourSynthEvolution/havsfunc"}
-mvsfunc = {git = "https://github.com/HomeOfVapourSynthEvolution/mvsfunc"}
 pre-commit = "^3.7.0"
 vapoursynth = "*"
 
@@ -64,7 +62,28 @@ types-requests = "^2.28.8"
 asyncio_mode = "auto"
 
 [tool.ruff]
-extend-ignore = ["B018", "B019", "RUF001", "RUF002", "RUF005", "RUF013", "PGH003", "PGH004", "F841", "C408", "B006", "B007", "B028", "E741", "E711", "E712", "E731", "F811"]
+extend-ignore = [
+  "B018",
+  "B019",
+  "B904",
+  "RUF001",
+  "RUF002",
+  "RUF003",
+  "RUF005",
+  "RUF013",
+  "PGH003",
+  "PGH004",
+  "F841",
+  "C408",
+  "B006",
+  "B007",
+  "B028",
+  "E741",
+  "E711",
+  "E712",
+  "E731",
+  "F811"
+]
 extend-select = [
   "I",  # isort
   "B",  # flake8-bugbear
