--- a/.github/workflows/CI-test.yml
+++ b/.github/workflows/CI-test.yml
@@ -32,7 +32,8 @@ jobs:
         with:
           submodules: recursive
 
-      - uses: actions/setup-python@v4
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
 
