--- a/.github/workflows/CI-test.yml
+++ b/.github/workflows/CI-test.yml
@@ -23,7 +23,8 @@ jobs:
     strategy:
       matrix:
         os-version: ["ubuntu-22.04", "macos-14"]
-        python-version: ["3.9", "3.10", "3.11", "3.12"]
+        #python-version: ["3.9", "3.10", "3.11", "3.12"]
+        python-version: ["3.9", "3.10"]
         poetry-version: ["1.8.3"]
 
     runs-on: ${{ matrix.os-version }}
