--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ strict = true
 warn_return_any = false
 
 [tool.poetry]
-authors = ["TensoRaws"]
+authors = ["EutropicAI"]
 classifiers = [
   "Programming Language :: Python :: 3.9",
   "Programming Language :: Python :: 3.10",
@@ -32,11 +32,11 @@ classifiers = [
   "Programming Language :: Python :: 3.12"
 ]
 description = "mbf's VapourSynth functions"
-homepage = "https://github.com/TensoRaws/mbfunc"
+homepage = "https://github.com/EutropicAI/mbfunc"
 license = "GPL-3.0-only"
 name = "mbfunc"
 readme = "README.md"
-repository = "https://github.com/TensoRaws/mbfunc"
+repository = "https://github.com/EutropicAI/mbfunc"
 version = "0.1.1"
 
 # Requirements
