--- a/.github/workflows/CI-test.yml
+++ b/.github/workflows/CI-test.yml
@@ -36,8 +36,8 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Setup vapoursynth
-        uses: deadnews/action-setup-vs@v1.0.5 # R70
+      #      - name: Setup vapoursynth
+      #        uses: deadnews/action-setup-vs@v1.0.5 # R70
 
       - uses: abatilo/actions-poetry@v3
         with:
